k8s/overlays/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: devops-demo-prod
  labels:
    app.kubernetes.io/name: devops-k8s-demo
    app.kubernetes.io/environment: prod
